@@ -16,5 +16,7 @@ grazing (0.0.1) UNRELEASED; urgency=medium
   * E01BFF substituted with DPCHFE from PCHIM.
   * D01GAF substituted with FOURPT, a port from ALGOL of the Gill-Miller Algorithm.
   * E01BGF substituted with DPCHFD from PCHIM.
+  * S14AAF substituted with tgamma().
+  * S18AEF substituted with BESSI0.
 
  -- Ricardo Yanez <ricardo.yanez@calel.org>  Tue, 11 Oct 2022 11:51:04 -0700
